2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 2.9.1. 
	  Tag name: "foomatic-db-engine-2_9_1".

	* README, USAGE, Foomatic-Devel-Ideas.txt: Updated for version
	  2.9.1.
	
2002-12-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Allow settings for options which do not
	  exist for the current printer/driver combo in the choices of
	  composite options. These will be deleted from the composite
	  option in the final PPD file. With this it gets much easier
	  to set up the composite option, for example the one for the
	  "pxlmono" driver where some printers have the PJL option
	  "Economode" and some not. So one simply puts in settings for
	  "Economode" and these are only used for the appropriate
	  printers. So much less constraints are needed in the XML
	  file for the composite option.
	
2002-12-15  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Let "getppd()" put the member options of a
	  composite option into a main group and not into a subgroup of
	  the group where the composite option is located. Most frontends
	  do not support subroups.

2002-12-14  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: use longname of composite option in the
	  longnames of the "From<composite>" choices in the member options
	  (ex: "FromPrintoutMode" -> "Controlled by 'Printout Mode'").

2002-12-11  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Modified keyword lists for sorting options
	  and choices according to the new agreement that the composite
	  option for pre-made configurations has the name "PrintoutMode"
	  and the choices "Draft", "Normal", "High", "VeryHigh", "Photo",
	  with the modifiers ".Gray", and ".Mono".

2002-12-10  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Improvements for composite options.

	  Given highest priority in the sort order to the option name