@@ -1,3 +1,13 @@
+2002-12-31  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* lib/Foomatic/DB.pm: Allow boolean options to be used as member
+	  options for composite options. To add the "From<Composite>"
+	  choice, booleanm member options will be implemented as
+	  enumerated choice options in the PPD file. In the
+	  "<ev_driverval>" entries in the XML file the boolean options
+	  have to be expressed as "Option=true", "Option=false", "Option"
+	  (means "true"), or "noOption" (means "false").
+	
 2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* *: Tagged CVS for the release of foomatic-db-engine 2.9.1. 
